# Jarvis-incomplete-

./: .gitignore  README.md
.github/workflows/: ci.yml
.tmp_pytest/app_memory_supervisor/test_desktop_app_memory_superv0/: desktop_app_memory_supervisor.json
.tmp_pytest/app_memory_supervisor/test_desktop_app_memory_superv1/: desktop_app_memory_supervisor.json
.tmp_pytest/app_memory_supervisor/test_desktop_app_memory_superv2/: desktop_app_memory_supervisor.json
.tmp_pytest/app_memory_supervisor/test_desktop_app_memory_superv3/: desktop_app_memory_supervisor.json
.tmp_pytest/app_memory_supervisor/test_desktop_app_memory_superv4/: desktop_app_memory_supervisor.json
.tmp_pytest/app_memory_supervisor/test_desktop_app_memory_superv5/: desktop_app_memory_supervisor.json
.tmp_pytest/app_memory_supervisor/test_desktop_app_memory_superv6/: desktop_app_memory_supervisor.json
JARVIS_BACKEND/: .coverage  Models to Download.txt  README.md  backend_coverage.json  backend_file_structure.md  coverage.json  pytest.ini  requirements-test.txt
JARVIS_BACKEND/backend/python/: __init__.py  desktop_api.py  event_bus.py  (+3 more)
JARVIS_BACKEND/backend/rust/: Cargo.toml
JARVIS_BACKEND/backend/rust/src/: audio_utils.rs  automation_engine.rs  file_access.rs  input_analyzer.rs  ipc_bridge.rs  lib.rs  main.rs  safety_guard.rs  surface_router.rs  system_monitor.rs  windows_control.rs
JARVIS_BACKEND/configs/: api_keys.json  jarvis.yaml  permissions.json  provider_credentials.json  ui_config.json
JARVIS_BACKEND/data/: context_opportunity_tuning_state.json  desktop_state.jsonl  episodic_memory.jsonl  execution_strategy.json  external_reliability.json  macros.json  policy_bandit.json  policy_guardrails.json  runtime_memory.jsonl  stt_provider_state.json  triggers.json  voice_adaptive_state.json
JARVIS_BACKEND/docs/: agentic_execution_plan.md
JARVIS_BACKEND/tests/: conftest.py
JARVIS_GUI/: .eslintignore  .eslintrc.json  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
JARVIS_GUI/desktop/: launch-electron.cjs  main.cjs  package-desktop.cjs  preload.cjs
JARVIS_GUI/docs/: blueprint.md
JARVIS_GUI/tests/: action-arg-validation.test.ts  action-control-panel.dom.test.tsx  action-templates.test.ts  backend-client.test.ts  cn.test.ts  setup-dom.ts  voice-continuous-controls.dom.test.tsx  voice-continuous-lifecycle-panel.dom.test.tsx  voice-continuous-recovery-card.test.tsx  voice-recovery-history-panel.test.tsx  voice-runtime-overview-panel.dom.test.tsx  voice-runtime-overview-panel.test.tsx  voice-wakeword-supervision-panel.dom.test.tsx  voice-wakeword-supervision-panel.test.tsx
data/: app_launcher_memory.json  context_opportunity_tuning_state.json  desktop_benchmark_lab_memory.json  desktop_state.jsonl  episodic_memory.jsonl  execution_strategy.json  external_reliability.json  macros.json  manual_history.json  policy_guardrails.json  runtime_memory.jsonl  stt_provider_state.json  triggers.json  voice_adaptive_state.json
data/security/: defender_history.jsonl
wakeword/: Jarvis_en_windows_v4_0_0.ppn
(+357 files in other folders)
